--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Price Comparision Table</title>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- TITLE LOGO -->
+    <link rel="icon" type="image/png" href="title-logo.png">
 </head>
 <body>
     <section class="price-comparision">
