--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Price Comparision Table</title>
+    <title>Price Comparision Component | Justin Mathais</title>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
     <!-- TITLE LOGO -->
